# valsoray-dev

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
assets/: index.html  rickroll.html  style.css
src/: main.rs
src/static/: index.html
