[package]
name = "valsoray-dev"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "valsoray-dev"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-files = "0.6"
actix-web = { version = "4.9", default-features = false, features = [
    "macros",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
